# triggenger

./: .gitignore  pyproject.toml  tox.ini
.github/workflows/: python-tests.yml
tests/: test_action.py  test_ai_handler.py  test_message.py  test_message_manager.py  test_trigger.py
triggenger/: __init__.py
triggenger/email_manager/: __init__.py  email_decoder.py  email_listener.py  email_manager.py  email_processor.py  types.py  utils.py
triggenger/message_manager/: __init__.py  action.py  ai_handler.py  message.py  message_manager.py  trigger.py  types.py
