[tool.poetry]
name = "triggenger"
version = "0.1.0"
description = "A Python package for automating actions based on emails"
authors = ["Abdulrhman Sayed Ali <abdulrhmansayedali@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
