[tool.poetry]
name = "triggenger"
version = "0.1.0"
description = "A Python package for automating actions based on emails"
authors = ["Abdulrhman Sayed Ali <abdulrhmansayedali@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
imapclient = "^3.0.1"
openai = "^1.51.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.21.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,build,dist"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
